--- a/si.html
+++ b/si.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Preguntale a tu flaca</title>
+    <title>?</title>
 </head>
 <body>
     <div class="container">
         <div class="tenor-gif-embed" data-postid="16961599182308150028" data-share-method="host" data-aspect-ratio="1.02484"
-            data-width="200%"><a
+            data-width="150%"><a
                 href="https://tenor.com/view/ehehe-laughing-cat-cat-laughing-silly-cat-gif-16961599182308150028">Ehehe Laughing
                 Cat GIF</a>from <a href="https://tenor.com/search/ehehe-gifs">Ehehe GIFs</a></div>
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1>VAMOS SIUUUU MICHIS PARA SIEMPREEEE MUAAAAHAHAHHAHA </h1>
+        <h1>VAMOS SIUUUU MICHIS PARA SIEMPREEEE MUAAAAHAHAHAHA </h1>
     </div>
 </body>
 </html>
