--- a/no1.html
+++ b/no1.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="18148463711766725559" data-share-method="host" data-aspect-ratio="1.0641" data-width="100%"><a href="https://tenor.com/view/peach-cat-crying-peach-goma-peach-and-goma-mochi-mochi-peach-cat-gif-gif-18148463711766725559">Peach Cat Crying Peach Goma Sticker</a>from <a href="https://tenor.com/search/peach+cat+crying-stickers">Peach Cat Crying Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1>¿Estas Segura? Piensalo bien 😥  </h1>
+        <div class="tenor-gif-embed" data-postid="9398984413176059659" data-share-method="host" data-aspect-ratio="1"
+            data-width="100%"><a href="https://tenor.com/view/gato-cat-gif-9398984413176059659">Gato Cat GIF</a>from <a
+                href="https://tenor.com/search/gato-gifs">Gato GIFs</a></div>
+        <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <h1>¿Estas Segura? Piénsalo bien :(  </h1>
         <div class="btn">
             <a href="si.html">SI</a>
             <a href="no2.html">NO</a>
