--- a/no2.html
+++ b/no2.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="21443416" data-share-method="host" data-aspect-ratio="0.95625" data-width="100%"><a href="https://tenor.com/view/white-cat-cats-hell-yeah-cat-gif-21443416">White Cat Cats GIF</a>from <a href="https://tenor.com/search/white+cat-gifs">White Cat GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1>Seras mia a las buenas o a las malas 😈  </h1>
+        <div class="tenor-gif-embed" data-postid="16550226608314266617" data-share-method="host" data-aspect-ratio="0.752427"
+            data-width="100%"><a
+                href="https://tenor.com/view/roflandz-mad-kitten-kitten-cute-kitten-kitten-cute-gif-16550226608314266617">Roflandz
+                Mad Kitten GIF</a>from <a href="https://tenor.com/search/roflandz-gifs">Roflandz GIFs</a></div>
+        <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <h1>Tú vas a ser mía, ya te lo digo yo </h1>
         <div class="btn">
             <a href="si.html">SI</a>
             <a href="#" id="btn-random">NO</a>
