--- a/tequiero.html
+++ b/tequiero.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <img src="/Imagen de WhatsApp 2025-02-11 a las 20.49.53_1bb7bfb5.jpg" alt="Descripción de la imagen" class="mi-foto"/>
+        <img src="img/image.jpg" alt="Descripción de la imagen" class="mi-foto"/>
         <h1>YO TE QUIERO MÁS</h1>
         <h2>eres lo mejor que me ha pasado. sólo quiero comprarme un coche para poder llevarte a todos lados
             mientras me abrazas del brazo.
