--- a/si.html
+++ b/si.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h1>VAMOS SIUUUU MICHIS PARA SIEMPREEEE MUAAAAHAHAHAHA </h1>
         <div class="btn">
-            <a href="tequiero.html">picha si me quieres mucho</a>
+            <a href="tequiero.html">pincha si me quieres mucho</a>
         </div>
     </div>
 </body>
