--- a/no1.html
+++ b/no1.html
@@ -14,8 +14,8 @@
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h1>¿Estas Segura? Piénsalo bien :(  </h1>
         <div class="btn">
-            <a href="si.html">SI</a>
-            <a href="no2.html">NO</a>
+            <a href="si.html">veeenga vaaale</a>
+            <a href="no2.html">que no</a>
         </div>
     </div>
 </body>
